# ChangeLog for media-libs/harfbuzz
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/harfbuzz/ChangeLog,v 1.45 2013/09/02 19:28:22 tetromino Exp $

*harfbuzz-0.9.20 (02 Sep 2013)

  02 Sep 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -harfbuzz-0.9.17.ebuild, +harfbuzz-0.9.20.ebuild, harfbuzz-9999.ebuild:
  Version bump; fixes various bugs, adds API docs and experimental
  gobject-introspection support. Drop old.

  13 Jul 2013; Fabian Groffen <grobian@gentoo.org> harfbuzz-0.9.18-r1.ebuild:
  Fix linking on Solaris, same fix as necessary for Darwin

  06 Jul 2013; Agostino Sarubbo <ago@gentoo.org> harfbuzz-0.9.12.ebuild:
  Stable for alpha, wrt bug #470762

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> harfbuzz-0.9.12.ebuild:
  Stable for arm, wrt bug #470762

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> harfbuzz-0.9.12.ebuild:
  Stable for ppc64, wrt bug #470762

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> harfbuzz-0.9.12.ebuild:
  Stable for sparc, wrt bug #470762

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> harfbuzz-0.9.12.ebuild:
  Stable for ia64, wrt bug #470762

  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> harfbuzz-0.9.12.ebuild:
  Stable for ppc, wrt bug #470762

  20 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org> harfbuzz-0.9.18-r1.ebuild:
  Remove double elibtoolize wrt bug#473006.

  19 Jun 2013; Jeroen Roovers <jer@gentoo.org> harfbuzz-0.9.12.ebuild:
  Stable for HPPA (bug #470762).

*harfbuzz-0.9.18-r1 (06 Jun 2013)

  06 Jun 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -harfbuzz-0.9.18.ebuild, +harfbuzz-0.9.18-r1.ebuild, harfbuzz-9999.ebuild:
  Add a subslot due to ABI change (some symbols moved to libharfbuzz-icu), bug
  #472416.

*harfbuzz-0.9.18 (05 Jun 2013)

  05 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/harfbuzz-0.9.18-ldadd.patch, +harfbuzz-0.9.18.ebuild,
  harfbuzz-9999.ebuild, metadata.xml: