@@ -8,18 +8,18 @@ DIST harfbuzz-0.9.18.tar.bz2 902395 SHA256 fef0fbbc6d6492cb4074a5e26a699d87d88be
 DIST harfbuzz-0.9.20.tar.bz2 1030152 SHA256 83384fa03fbcf0c5d8203374bae2efef7dcac650f428d2216d8a6d2251dbbc67 SHA512 2473885cf77f2353a28779f55aa5eb323190fd5432d2bba0026a0b337986d293e8a38d7a5bd6c68e7bc3843e6ad3ed3a592d12b896fc28ff7119c67a8c7d6f45 WHIRLPOOL 0a35408913a042a3055f30b743d4e278b903254e762a6daa37f8955aa9907480b670120a6520e7b2487cfcc00959d43930c845293d8a674826fe90f8c2d3f18f
 EBUILD harfbuzz-0.9.12.ebuild 1686 SHA256 bb37abe8e6425b37dee64cd95e4a0e31b6ab8bf64ba0085b3cfeb422b620ce0c SHA512 9e5da3fe6be6e95a3ff5cd968e09dc13434e5e1591eee8f1ddc05552be59ce7b09a6b3d3d3d6522197be1213d86fcd3fe5894a3c3514d746297d4615227d3e3b WHIRLPOOL a36fe247b2f54dbc8b5db2c3344e042f18d7f2e52679fb94784e870cc6309e9d86e61d9f0a9ab729da82325c0bd34c274030c269013cce6daa5efb52de5c7bb9
 EBUILD harfbuzz-0.9.18-r1.ebuild 1946 SHA256 e8baab01829217a046eb369a565b601494b202fdc402322dc5b1247982a5e47c SHA512 8b16d82a5a52cceae19e6c5380d8e7c24de7a252202d7804b67cad4fbca13697e859d7b330e56a095c4c5be10ad5e3311bbe03af66c98c942b2a2224431ad971 WHIRLPOOL 2f7df3064047b4e3558b2f478bb1a17a08707e86e3e9f6a8cb52fea01a9a15f865851aa23520204019d6b299b7842d6e9ccb3b6482fdebdd17b5b6d3d1bada36
-EBUILD harfbuzz-0.9.20.ebuild 2212 SHA256 6e9180b2d337d75ff6f229b025451428d8187c3bd07305a6904b2b8a3473d3cd SHA512 cb0f364135a3d092038036f5bc78e794fe58fffbcb7703a7e8a14f95086baef844c6ed497d3362ed079999a3bc20f4a668f0779e91b48db37c387555214833a3 WHIRLPOOL a3f510562a2ab596620a1455214b76b1442ed45b3c7e523b8a494412a778ecc0f7aaafcb3f9b1e2c8b26a55b60dddfda42508a4a823341dec4969c5109037016
-EBUILD harfbuzz-9999.ebuild 2211 SHA256 2a172da8e239b5fd6288ae78f6097e792448e5d8d419287641fd2e56d69b2af6 SHA512 d83b58240b643aa2415ce8e41cccdb10d601bdd2fa4293a713ddc477274a6190a5a2cd4ec07fe485d8345f57ea81ee79e3ac51ee390891d064c8f561aa71b653 WHIRLPOOL 066a044c67b86c774ef3e35f66ac4e2647b517e42c432b16b5159edd15e5fc042223e5b228d4f422f2ef2a1b8bbcb16ac8742ed3a7d19b457c3bb820fbe17204
-MISC ChangeLog 7245 SHA256 a3b1f23d2b7ca87092cbb0080503ddf0a92683f82eb655c5635a19527eac2ce7 SHA512 419f7bd465c2c6a3c4b28ae2fe9b831def5fa84c8ff27aedeb72221d1da5b97941713d880d1f824b069cb9064fcce8b09bfef98205b076a24efb6bf9c260a324 WHIRLPOOL 5b0ff118f3c98d46f08d7edba9347dfdf4b4b7046c0ee02e2e3b66835f237a72a7f77ae1043bc19cb857b858000eba4f71f29d471874a499d22f96f835655891
+EBUILD harfbuzz-0.9.20.ebuild 2305 SHA256 c8d2025ac47bd64696ae1b210f2e080fe023895531fe86faa07e3679cdf0f578 SHA512 fcc563f443e744b1a40657bca400a5091352c68861e261003c8e1870e7303db07c433046aa0e4862f6baf1b58962cd3ffdbe35b60b8350d8e665d6d191c07b8a WHIRLPOOL 28ccbc4871a5433dfe23af219e0714de4514993a7283e52036078744f59eb0d9672043033792216d2a094395d079b04717a34527961f76daf18358cc62857483
+EBUILD harfbuzz-9999.ebuild 2304 SHA256 19dddc8035970cc56ca2f8c464425d9b7df42381833e05d65410cdd8e88de2d1 SHA512 6df85e4c7c32ea9ff0650336f419ea21a89be52297347be6efe7ffe5af65fb1226059f7218c4abe2321f2dd0c14554c0a244fca088af46d6aa77ce312561982d WHIRLPOOL 11b70dcbc3eebc5b2856e824083f15bf4a9575d0c847672b41af7cb3c03dd0407bf687082b29e02bed3c902aebe9f85998b71b66134fdb52c9367de9ff44db6f
+MISC ChangeLog 7467 SHA256 043fa4bebc394d964dc5ee1647643b32f28ab8755e6f20c6a6b256f7fd522e5c SHA512 bde392085100527e9dc177f4d8c23fe3a254d0b99c02099726de45874abd29a8e0020cfb049f7897556b44b7cff466ead4522f7fea572d6d219c784d10a982c5 WHIRLPOOL d31052ffb7e636ad94bf18df21d67ca91467d3d64e37556b3d98dd7ea968296273f511aee10454769ca8396bf71b983a9078fb9088c63faa9a356d1dc564e789
 MISC metadata.xml 348 SHA256 ab40ba306c3499687d57b89247a77e7e8093c88196e6c0fb2333f014ee37c3da SHA512 057542963b2698ddd474970f6b49a6b99c5ff1982c29d7495b6ea05a8bc5266007e328b6658c13052cad8cd2b1c44e2bd6d60ef3e4ef43755c6b4c785b908485 WHIRLPOOL f1799f9bedccd73989ce42f234a28222de692f147553bf4a8bdf154bb544f22ead4ade109700fea7785747d27adbcf30c5543d435f3584f43817b1ed1111b1a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSJObYAAoJEJ0WA1zPCt1hFNwH/RcD4ElVtmgP+ZUFgMx1+mK3
-Bxdpmc8mnkIK7v5M2KRMCgxzOMZAtF9wjlmnp8eTeIltvYhyHgd5mdm5snitEIAo
-qR0PfANy6ghJ2vX6DoRFjEh+dKqasM69CHnLJSlmEgy0dPWlpfSNPVYcQBgJGc+c
-Pk6Se26/QH+kpAdeQuFgdFGBmD+l8EDwk5TKpOLjOinVs0nKHqXVbWmdmoy9GfRv
-fD/i5pzie9QqtTd8FK2JYfHvjbyqvsQZVZj1E2VijjIyIR58yR4IV5L5rqKu3MxP
-umkSocMUnjKRT6d+JPvhlyOMbce6+BYfpnA1HgDHJz47nlYOsfkngg/XM2nC04s=
-=MFpy
+iQEcBAEBCAAGBQJSLyQ+AAoJEJ0WA1zPCt1h3ogIAJpx3grrc+BILGY4xCNnpwSD
+xcVkw9LcUdUbwV8qkU+VFhyySZAPAPhZG4T/jbrndh+QhfSXzavCjuXZq9tQWq/W
+LeKzilEkt6a8QPKTTk+oMMklgD6ciLlEzCocws8J3SupHl2TVY5rhlDJuWhHtDiQ
+VtPnh3injF1rx3+f0iKUe1Fr+JVAS3FaLub6HCfSGqIpvaM0UXDy5q7XCkl1NT7A
+zZTOz4FyFj84K+I3Z0D4axBiys1a9eNiXJneXi8eMQJzzxKhHg25g+uiUpl0toZy
+M386wy/b5bGSp8KTjv2o5uotC0zhTdnXN17AcG8HUn4jgsTFCe2Fyn5+eN51ECU=
+=wcFf
 -----END PGP SIGNATURE-----
