@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/harfbuzz
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/harfbuzz/ChangeLog,v 1.45 2013/09/02 19:28:22 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/harfbuzz/ChangeLog,v 1.46 2013/09/10 13:52:46 tetromino Exp $
+
+  10 Sep 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
+  harfbuzz-0.9.20.ebuild, harfbuzz-9999.ebuild:
+  Don't require gobject-introspection-common if we are not doing eautoreconf
+  (bug #484312, thanks to grey dot).
 
 *harfbuzz-0.9.20 (02 Sep 2013)
 
